# vendor

./: .gitignore  CURRENT_VERSIONS.txt  LICENSES.md  README-deploy.md  README-licenses.md  README.md  test-linux-build.sh
.github/: release-notes.template.md
.github/workflows/: build-fetch.yml  build-release.yml  check-versions.yml
go/fetch/: README.md  go.mod  main.go
go/fetch/gpu/: vendor.go
go/fetch/gpu/cmd/fetch/: main.go
go/lib/: README.md  go.mod  vendor.go
golib/: README.md  go.mod  vendor.go
mental-llvm/: CMakeLists.txt  mental_llvm.cpp  mental_llvm.h
naga-ffi/: Cargo.toml
patches/: atlbase_compat.h  dxc-emscripten.patch
scripts/: build-clspv-mlvm.sh  build-clspv-wasm.sh  build-clspv.sh  build-dxc-wasm.sh  build-dxc.sh  build-dxc.sh.bak  build-dxc.sh.bak12  build-dxc.sh.bak15  build-dxc.sh.bak16  build-glslang.sh  build-glslang.sh.bak  build-glslang.sh.bak15  build-glslang.sh.bak16  build-llvm-mlvm.sh  build-llvm.sh  build-mesa-spirv-to-dxil.sh  build-mlvm.sh  build-naga-wasm.sh  build-naga.sh  build-spirv-cross.sh  build-spirv-cross.sh.bak  build-spirv-cross.sh.bak15  build-spirv-cross.sh.bak16  build-spirv-llvm-translator-mlvm.sh  build-spirv-llvm-translator.sh  common.sh  download-dxc-windows.sh
